--- a/skysub.tex
+++ b/skysub.tex
@@ -1208,7 +1208,7 @@ We summarize our findings on the accuracy of surface brightness shapes reproduce
 
 We have presented near-infrared ($J$ and $K_s$) images of M31's entire bulge and disk with CFHT/WIRCam.
 These maps surpass the 2MASS \citep{Beaton:2007} and Spitzer \citep{Barmby:2006} mosaics with superior resolution that permits the identification of individual stars throughout M31's mid and outer disk.
-The dataset is also complementary to the HST/WF3 PHAT survey \citep{Dalcanton:2012} by providing complete coverage of M31's disk to $R=22$~kpc, and by offering a broader NIR colour baseline ($J-K_s$) than is offered by WF3 (approximately $J-H$).
+The dataset is also complementary to the HST/WF3 PHAT survey \citep{Dalcanton:2012} by providing complete coverage of M31's disk within $R=22$~kpc, and by offering a broader NIR colour baseline ($J-K_s$) than is offered by WF3 (approximately $J-H$).
 NIR mosaics of M31 have crucial applications for studies of the nearly attenuation-free stellar structure of our nearest spiral neighbour, and for tests of stellar population synthesis models in NIR regimes.
 
 Our focus in this paper has been the establishment of procedures for accurately recovering the NIR surface brightness across 3~sq.~deg.\ of the M31 disk using a sky-target nodding observing strategy with WIRCam on CFHT\@.
@@ -1216,19 +1216,19 @@ We have compared two different observing methods to study the effects of sky tar
 We have also developed and tested our WIRCam pipeline for flat fielding, zeropoint estimation, median sky subtraction, and sky offset optimization.
 
 We find that our NIR SB reconstruction is limited in two regimes: large scale reconstruction of surface brightness with sky offsets, and surface brightness \emph{shape} uncertainties across individual WIRCam images.
-On a large scale, the necessity of nodding between sky and target limits the our direct knowledge of the sky level on the disk by $\gtrsim 2$\% of the sky level.
+On a large scale, the necessity of nodding between sky and target limits our direct knowledge of the sky level on the disk by $\gtrsim 2$\% of the sky level.
 Strictly minimizing latency between sky and disk integrations (as in the 2009B program) provides only limited improvement in our knowledge of the sky level on the disk because of the overhead in nodding the telescope, and spatial structure in the NIR sky glow itself.
 Sky offset optimization is successful in reducing block-to-block surface brightness differences to $<0.1$\% of the sky level.
-Given a realized set of blocks, our optimization algorithm reliable finds a consistent solution, so any errors in surface brightness shape across the mosaic are caused by errors in the shapes of individual blocks (see below).
+Given a realized set of blocks, our optimization algorithm reliably finds a consistent solution, so any errors in surface brightness shape across the mosaic are caused by errors in the shapes of individual blocks (see below).
 The absolute surface brightness of the mosaic, however, is uncertain up to the level of our assertion that the net sky offset applied to the images is zero ($\sim \sigma_{\Delta_B} / \sqrt{N_\mathrm{blocks}}$; 0.16\% of the sky level in our mosaics).
 This zeropoint can ultimately be established using resolved stellar populations, the subject of a forth coming \androids\ study.
 
-The shape of a WIRCam frame can be affected by both: flat field uncertainties and additive background uncertainties.
+The shape of a WIRCam frame can be affected by both flat field uncertainties and additive background uncertainties.
 First, we have discovered that the WIRCam flat field function can change by 1\% in 60~minutes.
 This effect is predominantly influential in the signal dominated regime of the M31 bulge; though it is also significant for resolved stellar photometry.
 We thus find that constructing real-time sky flats is essential for calibrating WIRCam images.
-In sky dominated regimes, the 2D SB shapes of individual WIRCam frames ($20\arcmin\times20\arcmin$) are uncertain by 0.2\% of the sky intensity, centre-to-edge.
-These background fluctuations present a lower limit in the surface brightness uncertainty across a WIRCam frame since it appears to be caused by sky glow variations in disk images that cannot be fully corrected with median sky subtraction.
+In sky-dominated regimes, the 2D SB shapes of individual WIRCam frames ($20\arcmin\times20\arcmin$) are uncertain by 0.2\% of the sky intensity, centre-to-edge.
+These background fluctuations present a lower limit in the surface brightness uncertainty across a WIRCam frame since they appear to be caused by sky glow variations in target images that cannot be fully corrected with median sky subtraction.
 
 We now summarize our analysis of the data taking and reduction methods developed in this work, and in doing so, formulate a set of best practices for similar wide-field NIR surveys employing sky-target nodding.
 
@@ -1249,9 +1249,8 @@ Sky offsets optimization is aided by having more independent blocks covering the
 Given that $\sigma_B$ cannot be reduced, increasing the number of \emph{independent} blocks (observed hours, even a night, apart to decouple sky and instrumental biases) is the most reliable way to establish the absolute surface brightness accuracy of the mosaic.
 Since sky offsets are further biased by any shape errors in blocks (realized as our inability to diminish block-to-block offsets below $\sim~0.1\%$ of sky brightness), we propose that blocks be interlaced by 50\% (so that one detector completely overlaps a detector from an adjacent blocks).
 This interlacing pattern would thus enable the marginalization of shape errors across the entire detector frame.
-By integrating only half the time on each block, the total mosaic could be reproduced with an equivalent integration.
 By doubling the number of blocks, each with individually halved exposure times, the mosaic could be reproduced with an equivalent net integration time.
-\todo{Would this scheme increase the uncertainty in the sky level of each block, since there would be only half as many blocks? Then again, we double the number of blocks, so the uncertainty should be unchanged. Verify this.}
+% \todo{Would this scheme increase the uncertainty in the sky level of each block, since there would be only half as many blocks? Then again, we double the number of blocks, so the uncertainty should be unchanged. Verify this.}
 
 \bigskip We wish to thank Loic Albert and Karun Thanjavur, previously from CFHT, for their help with WIRCam I'iwi data products and procedures.
 J.S. and S.C. acknowledge support through respective Graduate Scholarship and Discovery grants from the Natural Sciences and Engineering Research Council of Canada.
