New title, added addresses

--- a/skysub.tex
+++ b/skysub.tex
@@ -48,17 +48,19 @@
 \begin{document}
     \IfFileExists{vc.tex}{\slugcomment{Version \VCRevision\ by \VCAuthor\ on \VCDateTEX , \VCTime.}
 }{\slugcomment{Revision unknown.}}
-\title{ANDROIDS I. Wide-Field Near-Infrared Imaging of the Andromeda Galaxy (M31)}
+% \title{ANDROIDS I. Wide-Field Near-Infrared Imaging of the Andromeda Galaxy (M31)}
+% \title{ANDROIDS I. New Insights in Near-IR Photometry of Extended Sources from the Andromeda Galaxy (M31)}
+\title{ANDROIDS I. New Insights in Extremely Wide-Field Near-IR Photometry\\ with the Andromeda Galaxy (M31)}
 \author{Jonathan Sick, Stéphane Courteau}
-\affil{Queen's University}
+\affil{Department of Physics, Engineering Physics \& Astronomy, Queen's University, Kingston, Ontario, K7L 3N6 Canada}
 \email{jsick@astro.queensu.ca}
 \author{Jean-Charles Cuillandre}
-\affil{Canada-France Hawaii Telescope Corp.}
+\affil{Canada-France-Hawaii Telescope Corp., Kamuela, HI 96743, USA}
 \author{Michael McDonald}
-\affil{Massachusetts Institute of Technology}
+\affil{Kavli Institute for Astrophysics and Space Research, MIT, Cambridge, MA 02139, USA}
 \and
 \author{Brent Tully}
-\affil{University of Hawaii, Institute for Astronomy}
+\affil{Institute for Astronomy, University of Hawaii, 2680 Woodlawn Drive, Honolulu, HI, USA}
 
 % ============================================================================
 \begin{abstract}
