Title tweak: surface photometry

--- a/skysub.tex
+++ b/skysub.tex
@@ -50,7 +50,7 @@
 }{\slugcomment{Revision unknown.}}
 % \title{ANDROIDS I. Wide-Field Near-Infrared Imaging of the Andromeda Galaxy (M31)}
 % \title{ANDROIDS I. New Insights in Near-IR Photometry of Extended Sources from the Andromeda Galaxy (M31)}
-\title{ANDROIDS I. New Insights in Extremely Wide-Field Near-IR Photometry\\ with the Andromeda Galaxy (M31)}
+\title{ANDROIDS I. New Insights in Extremely Wide-Field Near-IR Surface Photometry\\ with the Andromeda Galaxy (M31)}
 \author{Jonathan Sick, Stéphane Courteau}
 \affil{Department of Physics, Engineering Physics \& Astronomy, Queen's University, Kingston, Ontario, K7L 3N6 Canada}
 \email{jsick@astro.queensu.ca}
