--- a/skysub.tex
+++ b/skysub.tex
@@ -64,22 +64,21 @@
 
 % ============================================================================
 \begin{abstract}
-We present wide-field near-infrared $J$ and $K_s$ images of the Andromeda Galaxy taken with WIRCam on the Canada-France-Hawaii Telescope.
+  We present wide-field near-infrared $J$ and $K_s$ images of the Andromeda Galaxy taken with WIRCam on the Canada-France-Hawaii Telescope (CFHT) as part of the Andromeda Optical and Infrared Disk Survey (\androids).
 This data set allows simultaneous observations of resolved stars and NIR surface brightness across M31's \emph{entire} bulge and disk (within $R=22$~kpc), permitting a direct test of the stellar composition of near-infrared light in a nearby galaxy.
-Our survey complements the similar HST/PHAT survey by covering M31's entire disk, rather than a single quadrant at similar wavelengths, albeit with lower resolution.
+Our survey complements the similar Panchromatic Hubble Andromeda Treasury survey by covering M31's entire disk, rather than a single quadrant, at similar wavelengths, albeit with lower spatial resolution.
 The primary concern of this work is the development of NIR observation and reduction methods to recover a uniform surface brightness map across the $3\arcdeg \times 1\arcdeg$ disk of M31.
 This necessitates sky-target nodding across 27 WIRCam fields.
-Our method differs from the original I'iwi CFHT pipeline with independent photometric, flat fielding and sky subtraction computations.
-We present our WIRCam reduction pipeline and performance analysis here as a template for future NIR observers needing wide-area surface brightness maps with sky-target nodding.
 Two sky-target nodding strategies were tested, and we find that strictly minimizing sky sampling latency does not maximize sky subtraction accuracy, which is at best 2\% of the sky level.
 The mean surface brightness difference between blocks in our mosaic can be reduced from 1\% to 0.1\% of the sky brightness by introducing scalar sky offsets to each image.
 We test the popular \sw{Montage} package, and also develop an independent method of estimating sky offsets using simplex optimization; we show these two optimization schemes to differ by up to 0.5~mag~arcsec$^{-2}$ in the outer disk.
 We find that planar sky offsets are not acceptable for subtracting these residual background across WIRCam fields that are much smaller than the mosaic area.
 The true surface brightness of M31 can be known to within 0.15\% of the sky level by applying sky offsets that minimize intensity differences in the network of overlapping WIRCam fields; this uncertainty decreases as the inverse square-root of the number of fields.
 Simulations show that the absolute surface brightness level of the disk at $R=15$~kpc is uncertain by 0.1--0.2~mag~arcsec$^{-2}$; further improvements depend upon a surface brightness calibration based on resolved stellar populations.
-We also find that the surface brightness across individual WIRCam frames is limited by both flat fielding accuracy and residual sky background shapes.
+We also find that the surface brightness across individual WIRCam frames is limited by both in the WIRCam flat field evolution and residual sky background shapes.
 To overcome flat field variability of order 1\% over 30 minutes, we find that WIRCam data should be calibrated with real-time sky flats.
 Due either to atmospheric or instrumental variations, the individual WIRCam frames have typical residual shapes with amplitudes of 0.2\% of the sky after real-time flat fielding and median sky subtraction.
+We present our WIRCam reduction pipeline and performance analysis here as a template for future near-infrared observers needing wide-area surface brightness maps with sky-target nodding, and give specific recommendations for improving photometry of all CFHT/WIRCam programs.
 \end{abstract}
 
 % ============================================================================
