Used MMD suggestions for abstract

--- a/skysub.tex
+++ b/skysub.tex
@@ -87,7 +87,7 @@ We present our WIRCam reduction pipeline and performance analysis here as a temp
 
 Thanks largely to its proximity, kinship with the Milky Way, and being an ideal foil for modern galaxy formation models, the Andromeda galaxy has been the focus of numerous investigations of galaxy structure \citep{Ibata:2005,Irwin:2005,McConnachie:2009,Courteau:2011}
 and stellar populations \citep{Williams:2002,Worthey:2005,Saglia:2010}.
-The shapes, ages, kinematics and relative fraction of galaxy components (bulge, disk, halo) in large spiral galaxies like our own reveal precious information about their formation, accretion, and merging histories \citep[\eg][to cite a few]{Kormendy:2004,de-Jong:2007}.
+The shapes, ages, kinematics and relative fraction of galaxy components (bulge, disk, halo) in large spiral galaxies like our own reveal precious information about their formation, accretion, and merging histories \citep[see the review of][]{Kormendy:2004}.
 
 Unfortunately, the fundamental task of disentangling galaxy components---which typically involves light profile decompositions, colour gradients and mass modelling---remains non-trivial.
 Stellar population studies of spiral galaxies are thwarted by a three-fold degeneracy between stellar age ($A$), metallicity ($Z$) and ISM dust that can only be lifted using at least optical and infrared images and realistic dust models \citep{de-Jong:1996b,MacArthur:2004,Pforr:2012}.
